# src_platform_clip-install-common

./: AUTHORS  CHANGELOG  Makefile.am  Makefile.in  README.md  configure  configure.ac
man/man5/: Makefile.am  Makefile.in  clip_install.conf.5
man/man8/: Makefile.am  Makefile.in  clip_install.8
scripts/: Makefile.am  Makefile.in  _clip_install
src/: Makefile.am  Makefile.in  clip_install.c
